Updated to canary new ui view

--- a/app/src/main/res/layout/dummy_layout.xml
+++ b/app/src/main/res/layout/dummy_layout.xml
@@ -3,19 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:layout_height="match_parent">
 
-    <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/txtShowDialog"
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:text="@string/show_dialog"
-        android:gravity="center"
-        android:background="?attr/selectableItemBackground"
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/imageView"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/outline_work_24"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
