--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,50 @@
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="TextViewStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:text">--</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:supportsRtl">true</item>
+        <item name="android:textDirection">locale</item>
+        <item name="android:textSize">@dimen/size_content</item>
+        <item name="android:lineSpacingMultiplier">0.9</item>
+        <item name="android:textColor">@color/purple_180</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:layout_marginTop">@dimen/font_margin_top</item>
+        <item name="android:layout_marginBottom">@dimen/font_margin_bottom</item>
+
+        <item name="android:includeFontPadding">false</item>
+    </style>
+
+    <style name="BorderLessButtonStyle" parent="Widget.MaterialComponents.Button.TextButton">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="textAllCaps">false</item>
+        <item name="android:elevation">0dp</item>
+        <item name="elevation">0dp</item>
+        <item name="android:textColor">@color/color_primary</item>
+        <item name="android:fontFamily">@font/text_regular</item>
+        <item name="android:insetTop">0dp</item>
+        <item name="android:insetBottom">0dp</item>
+        <item name="android:insetLeft">0dp</item>
+        <item name="android:insetRight">0dp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="UnderLineBorderLessButtonStyle" parent="BorderLessButtonStyle">
+        <item name="android:textSize">@dimen/size_label</item>
+        <item name="android:textColor">@color/color_primary</item>
+        <item name="underlineColor">@color/color_primary</item>
+        <item name="underlineTopMargin">@dimen/offset_8</item>
+        <item name="underlineWidth">@dimen/offset_2</item>
+    </style>
+
+    <style name="ContentSnackBar" parent="TextViewStyle">
+        <item name="android:textSize">@dimen/size_content</item>
+        <item name="android:fontFamily">@font/text_regular</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
 </resources>
