Custom Snack Bar Approach added

--- a/app/src/main/res/layout/custom_snackbar.xml
+++ b/app/src/main/res/layout/custom_snackbar.xml
@@ -8,20 +8,20 @@
     </data>
 
     <com.google.android.material.card.MaterialCardView
+        android:id="@+id/cardViewParent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="@dimen/offset_5"
         android:minHeight="@dimen/offset_70"
-        android:id="@+id/cardViewParent"
         app:cardBackgroundColor="@color/snack_bar_default"
         app:cardCornerRadius="@dimen/offset_12"
         app:cardElevation="0dp"
-        android:layout_margin="@dimen/offset_5"
         app:contentPadding="@dimen/offset_12">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/clParent"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/clParent"
             android:layout_gravity="center">
 
             <androidx.appcompat.widget.AppCompatImageView
@@ -31,10 +31,10 @@
                 android:layout_marginStart="@dimen/offset_8"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/txt_message"
+                app:layout_constraintHorizontal_chainStyle="spread_inside"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/ic_success" />
-
 
 
             <androidx.appcompat.widget.AppCompatTextView
@@ -42,30 +42,42 @@
                 style="@style/ContentSnackBar"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_marginStart="@dimen/offset_16"
-                android:layout_marginEnd="@dimen/offset_16"
+                android:layout_marginStart="@dimen/offset_8"
                 android:ellipsize="end"
                 android:maxLines="5"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/tvActionLbl"
+                app:layout_constraintEnd_toStartOf="@+id/img_close"
                 app:layout_constraintHeight="wrap_content"
                 app:layout_constraintStart_toEndOf="@+id/img_status"
                 app:layout_constraintTop_toTopOf="parent"
+                app:layout_goneMarginEnd="@dimen/offset_8"
                 tools:text="@tools:sample/lorem/random" />
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/img_close"
                 android:layout_width="@dimen/offset_24"
                 android:layout_height="@dimen/offset_24"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:tint="@color/alert_80"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:clickable="true"
                 android:focusable="true"
+                android:visibility="visible"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="@+id/tvActionLbl"
-                app:layout_constraintEnd_toEndOf="@+id/tvActionLbl"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/barrier"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/ic_close"
-                app:tint="@color/light_gray_20" />
+                app:tint="@color/white"
+                tools:visibility="visible" />
+
+            <androidx.constraintlayout.widget.Barrier
+                android:id="@+id/barrier"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:barrierDirection="end"
+                app:constraint_referenced_ids="txt_message" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/tvActionLbl"
@@ -74,18 +86,18 @@
                 android:layout_height="0dp"
                 android:layout_marginStart="@dimen/offset_8"
                 android:layout_marginEnd="@dimen/offset_16"
-                android:maxLines="1"
-                android:visibility="invisible"
-                tools:visibility="visible"
+                android:background="?attr/selectableItemBackground"
                 android:clickable="true"
                 android:focusable="true"
-                android:background="?attr/selectableItemBackground"
+                android:maxLines="1"
+                android:text="@string/lbl_restart"
+                android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/txt_message"
-                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintHeight="wrap_content"
-                android:text="@string/lbl_restart"/>
+                app:layout_constraintStart_toEndOf="@+id/barrier"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:visibility="gone" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </com.google.android.material.card.MaterialCardView>
